learning about Auto Multiple Choice

--- a/examples/Rakefile
+++ b/examples/Rakefile
@@ -3,6 +3,10 @@ task :exam do
   sh "ruql exam.rb Html5 > index.html"
 end
 
+task :autoqcm do
+  sh "ruql exam.rb AutoQCM"
+end
+
 desc "compile example.rb"
 task :example do
   sh "ruql example.rb Html5 > index.html"
